Fixed occasional freeze in 3 player, the chip balances now scale with the rest of the game interface to avoid hiding the board cards on smaller resolution screens, the wager input field in no limit is now disabled between turns, and some of _game_interface.html.haml was refactored.

--- a/app/assets/stylesheets/modules/_game_interface.sass
+++ b/app/assets/stylesheets/modules/_game_interface.sass
@@ -1,3 +1,7 @@
 .game_interface
   width: 940px
   position: absolute
+
+  .chip_balances
+    float: left
+    position: absolute
